# ex-oss

./: Taskfile.yml
mq/rabbitmq/: compose.yaml
mq/rabbitmq/consumer/: Dockerfile  main.py  pyproject.toml
mq/rabbitmq/producer/: main.py  pyproject.toml
